# bert-textbook-bias_trulens

./: README.md  predict_mask.py  requirements.txt  setup.cfg  trulens_tester.py  view_predictions.ipynb
finetuned_bert/: config.json
sample_textbook_contexts/: pr_0.25.txt  pr_0.45_0.55.txt  pr_high.txt
