[metadata]
name = bert-textbook-bias_trulens
version = 0.0.1
author = Andreas Paepcke
author_email = paepcke@cs.stanford.edu
description = History textbooks bias by Grace Lam, augmented with trulens viz
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paepcke/bert-textbook-bias_trulens.git

#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues

[options]

# Empty key in package_dir specifies root of packages;
# value is relative to proj root:

#package_dir=
#    = src

# Find the packages to include in distributions
# (that's different from the dependencies):
packages=find:

install_requires = 
                 jupyter>=1.0.0
                 torch>=1.11.0
                 transformers>=4.3.3
                 scipy>=1.8.0
                 domonic>=0.9.10
                 matplotlib>=3.5.1
                 numpy>=1.22.3
                 trulens-viz>=0.0.2
                 trulens @ git+https://git@github.com/truera/trulens.git

python_requires = >=3.6

[options.extras_require]

test = nose2>=0.9.2

[options.packages.find]
#where = src
